--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
     font-family: 'Spoqa Han Sans Neo';
     font-weight: 400;
     src: local('Spoqa Han Sans Neo Regular'),
@@ -30,4 +30,12 @@
         format('woff'),
       url('../assets/fonts/SpoqaHanSansNeo/SpoqaHanSansNeoBold.otf')
         format('opentype');
-  }
+  } */
+
+@font-face {
+  font-family: 'SpoqaHanSansNeo-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Regular.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
